# ndr_downscale

./: CMakeLists(Neuromeka_controller).txt  CMakeLists.txt  README.md  package.xml
add/: libPocoEncodingsd.so.60  libPocoFoundation.so.60  libPocoUtild.so.60  libPocoXMLd.so.60  libethercat.la  libethercat_rtdm.la  libethercat_rtdm.so.1.0.0
include/: CoE.h  EcatControlSocket.h  EcatDataSocket.cpp  EcatDataSocket.h  Kinematics.h  NRMKhw_tp.h  PDOConfig.c  PDOConfig.h  ServoAxis.h  SystemInterface_CoE.h  SystemInterface_EtherCAT_Servotronix_motion_control_ltd__CDHD.h  control.h  rate.h
include/HD/: hdExport.h
include/Interpolator/: BlendedPolynomialAlgorithm.h  MultipointAlgorithm.h  PolynomialAlgorithm.h
src/: hd_pub.cpp  hd_pub_v2.cpp  ndr_admittance_v3.cpp  ndr_impedance_v4.cpp  ndr_impedance_v4_qtnion.cpp  sub_indy7.cpp  sub_ndr_downscale.cpp  sub_ndr_downscale_positionMODE.cpp  sub_ndr_downscale_torqueMODE.cpp
subsrc/: sub_downscale_POSITION_mode.cpp  sub_downscale_POSITION_mode_backup.cpp
